--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
 runtime: nodejs10
 
 env_variables:
-  CLOUD_INSTANCE: fake-instance
+  CLOUD_INSTANCE: round-seeker-258123:us-central1:js311-12092019
